Added html tags for task1

--- a/index.html
+++ b/index.html
@@ -9,8 +9,100 @@
 </head>
 
 <body>
-    <h1>Hello, HTML!!!</h1>
-    <img src="img/rio.jpg" alt="rio" width="400" />
+    <header>
+
+        <h1>Hello, HTML!!!</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+        <h6>Heading 6</h6>
+        <nav><a href="#">Меню 1</a> | <a href="#">Меню 2</a> |
+            <a href="#">Меню 3</a> | <a href="#contacts">Contacts</a>
+        </nav>
+    </header>
+
+    <main>
+        <p>Paragraph</p>
+        <article><b>Some article</b> with placeholder <br />
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum."
+        </article>
+        <br />
+        <div>
+            <section><em>Some section</em> with placeholder <br />
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit
+                anim id est laborum."</section>
+            <br />
+            <span><small> Span </small> with placeholder <br />
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit
+                anim id est laborum." <br /><br /></span>
+
+        </div>
+        <div>Unordered list
+            <ul>Animals
+                <li>cats</li>
+                <li>dogs</li>
+                <li>birds</li>
+                <li>mouses</li>
+            </ul>
+        </div>
+        <div>Ordered list
+            <ol>Animals
+                <li>cats</li>
+                <li>dogs</li>
+                <li>birds</li>
+                <li>mouses</li>
+            </ol>
+        </div>
+        <div>
+            <form action="url-where-you-want-to-submit-form-data">
+                <input type="text" placeholder="input your text">
+                <button type="submit">Submit</button>
+            </form>
+            <form action="">
+                <label for="indoor">
+                    <input id="indoor" type="radio" name="indoor-outdoor" value="radio-1" checked>Radio button 1
+                </label>
+                <label for="outdoor">
+                    <input id="outdoor" type="radio" name="indoor-outdoor" value="radio-2">Radio button 2
+                </label>
+            </form>
+            <form action="">
+                <label for="checkbox-1"><input id="checkbox-1" type="checkbox" name="checkbox-test" value="checkbox-1" checked> Checkbox 1</label>
+                <label for="checkbox-2"><input id="checkbox-2" type="checkbox" name="checkbox-test" value="checkbox-2"> Checkbox 2</label>
+                <label for="checkbox-3"><input id="checkbox-3" type="checkbox" name="checkbox-test" value="checkbox-3"> Checkbox 3</label>
+            </form>
+        </div>
+        <hr />
+    </main>
+
+
+    <!-- <p>Comments</p> -->
+
+
+
+    <img src="img/rio.jpg" alt="rio" width="200" />
+
+    <video src=""></video>
+    <footer id="contacts">
+        <p>Created by Viktoriia Rychenko</p>
+    </footer>
 </body>
 
 </html>
