Added video, errors correction

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <p>Paragraph</p>
-        <article><b>Some article</b> with placeholder <br />
+        <article><h3><b>Some article</b></h3> with placeholder <br />
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
@@ -33,7 +33,7 @@
         </article>
         <br />
         <div>
-            <section><em>Some section</em> with placeholder <br />
+            <section><h3><em>Some section</em></h3> with placeholder <br />
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex
@@ -54,16 +54,16 @@
                 anim id est laborum." <br /><br /></span>
 
         </div>
-        <div>Unordered list
-            <ul>Animals
+        <div>Unordered list Animals
+            <ul>
                 <li>cats</li>
                 <li>dogs</li>
                 <li>birds</li>
                 <li>mouses</li>
             </ul>
         </div>
-        <div>Ordered list
-            <ol>Animals
+        <div>Ordered list Animals
+            <ol>
                 <li>cats</li>
                 <li>dogs</li>
                 <li>birds</li>
@@ -75,7 +75,7 @@
                 <input type="text" placeholder="input your text">
                 <button type="submit">Submit</button>
             </form>
-            <form action="">
+            <form>
                 <label for="indoor">
                     <input id="indoor" type="radio" name="indoor-outdoor" value="radio-1" checked>Radio button 1
                 </label>
@@ -83,7 +83,7 @@
                     <input id="outdoor" type="radio" name="indoor-outdoor" value="radio-2">Radio button 2
                 </label>
             </form>
-            <form action="">
+            <form>
                 <label for="checkbox-1"><input id="checkbox-1" type="checkbox" name="checkbox-test" value="checkbox-1" checked> Checkbox 1</label>
                 <label for="checkbox-2"><input id="checkbox-2" type="checkbox" name="checkbox-test" value="checkbox-2"> Checkbox 2</label>
                 <label for="checkbox-3"><input id="checkbox-3" type="checkbox" name="checkbox-test" value="checkbox-3"> Checkbox 3</label>
@@ -98,8 +98,8 @@
 
 
     <img src="img/rio.jpg" alt="rio" width="200" />
-
-    <video src=""></video>
+    <br />
+    <video src="https://youtu.be/sCG5q41P24U" controls autoplay></video>
     <footer id="contacts">
         <p>Created by Viktoriia Rychenko</p>
     </footer>
