Video source fixed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <img src="img/rio.jpg" alt="rio" width="200" />
     <br />
-    <video src="https://youtu.be/sCG5q41P24U" controls autoplay></video>
+    <video src="https://jsoncompare.org/LearningContainer/SampleFiles/Video/MP4/sample-mp4-file.mp4" controls autoplay></video>
     <footer id="contacts">
         <p>Created by Viktoriia Rychenko</p>
     </footer>
